Release 2
=========

Documentation
-------------

 - Fixed the documentation for preloading multiple images.
 - Added a note about playing sounds in iOS devices.
 

Examples
--------

 - Down the Rabbit-Hole now preloads the images it uses.


Libraries
---------

 - Updated jQuery to 1.7.1.
 

Modules
-------

 - Buttons: rewrote the button system.
 - Core: added Crockford's inheritance method. 
 - HTML: link() accepts the link building parameters as a single object.
 
 
Releases
--------

 - Added the media/music directory to theme packages.
 
 
 
Release 1.1 (2011-11-20)
========================

Initial release.